<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@android:color/holo_orange_dark"
   >

    <HorizontalScrollView

        android:scrollbarThumbHorizontal="@android:color/background_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_recycler_view_horizontalScrollView2"
        android:layout_below="@+id/item_recycler_view_tv_center_MAP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:id="@+id/item_recycler_view_linearLayout2">

                <TextView
                    android:id="@+id/item_recycler_view_tv_center_positon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/item_sportPostion"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:onClick="onclick"
                    tools:text="@string/item_sportPostion" />

                <TextView
                    android:autoLink="all"
                    android:id="@+id/item_recycler_view_tv_center_closeday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/item_sportDates"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    tools:text="@string/item_sportDates"
                    android:layout_below="@+id/item_recycler_view_tv_center_positon"
                    android:layout_alignRight="@+id/item_recycler_view_tv_center_mail"
                    android:layout_alignEnd="@+id/item_recycler_view_tv_center_mail" />

                <TextView
                    android:id="@+id/item_recycler_view_tv_center_fax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/item_sportFax"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    tools:text="@string/item_sportFax"
                    android:layout_below="@+id/item_recycler_view_tv_center_closeday"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:onClick="onclick"
                    android:id="@+id/item_recycler_view_tv_center_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/item_sportNumber"
                    android:textColor="#2196F3"
                    android:textSize="17dp"
                    tools:text="@string/item_sportNumber"
                    android:layout_below="@+id/item_recycler_view_tv_center_fax"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView

                    android:onClick="onclick"
                    android:id="@+id/item_recycler_view_tv_center_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/item_sportMail"
                    android:textColor="#2196F3"
                    android:textSize="17dp"
                    tools:text="@string/item_sportMail"
                    android:layout_below="@+id/item_recycler_view_tv_center_phone"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="225dp"
                    android:textSize="20dp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_scrllMsg"
                    android:id="@+id/item_recycler_view_tv_msg" />
            </LinearLayout>

            <ImageView
                android:scaleType="fitXY"
                android:layout_width="200dp"
                android:layout_height="190dp"
                android:id="@+id/item_recycler_view_iv_front"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/item_recycler_view_linearLayout2"
                android:layout_toEndOf="@+id/item_recycler_view_linearLayout2" />

            <!--<ImageView-->
                <!--android:scaleType="fitXY"-->
                <!--android:layout_width="250dp"-->
                <!--android:layout_height="190dp"-->
                <!--android:id="@+id/item_recycler_view_iv_inner"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_toRightOf="@+id/item_recycler_view_linearLayout2"-->
                <!--android:layout_toEndOf="@+id/item_recycler_view_linearLayout2" />-->

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:textStyle="bold"
        android:id="@+id/item_recycler_view_tv_center_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/item_sportName"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        tools:text="@string/item_sportCenter" />

    <TextView
        android:text="@string/item_map"
        android:background="@drawable/icon_googlemap"
        android:id="@+id/item_recycler_view_tv_center_MAP"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:onClick="onclick"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/item_recycler_view_tv_center_name"
        android:layout_toEndOf="@+id/item_recycler_view_tv_center_name" />

    <TextView
        android:text="@string/item_carmap"
        android:background="@drawable/icon_car_yellow"
        android:id="@+id/item_recycler_view_tv_center_導航"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:onClick="onclick"
        android:layout_toRightOf="@+id/item_recycler_view_tv_center_MAP"
        />

</RelativeLayout>