<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu2"
    tools:context=".Activity.Badminton_play_start">

    <RelativeLayout
        android:id="@+id/badmintion_play_main_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/drawer_contant_view"></include>
    </RelativeLayout>


    <include layout="@layout/layout_drawers_god"></include>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_below="@+id/badmintion_play_main_views"
        android:orientation="vertical"
        android:id="@+id/badmintion_play_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <TextView
                android:gravity="center"
                android:id="@+id/marquee_msg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="不在羽球場 就在前往的路上 ！！！            "
                android:textColor="#00838F"
                android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/badmintion_play_main_iv_photo_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_sport_man_lift" />

        <EditText
            android:id="@+id/badmintion_play_main_et_name_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="7"
            android:gravity="center"
            android:hint="@string/edtext_hint_name_msg"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/badmintion_play_main_linear_container_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/badmintion_play_main_linear_container_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/badmintion_play_main_et_name_down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="7"
            android:gravity="center"
            android:hint="@string/edtext_hint_name_msg"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/badmintion_play_main_iv_photo_down"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_sport_man_right" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/badmintion_play_main_btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_green0"
            android:onClick="onclick"
            android:text="@string/dialog_btn_back_menu" />

        <Button
            android:id="@+id/badmintion_play_main_btn_Change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_green0"
            android:onClick="onclick"
            android:text="@string/dialog_btn_change" />

        <Button
            android:id="@+id/badmintion_play_main_btn_Restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_green0"
            android:onClick="onclick"
            android:text="@string/dialog_btn_back_restar" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
